RESOLVED FIXED129630
Composited masks not working on iOS after r164890
https://bugs.webkit.org/show_bug.cgi?id=129630
Summary Composited masks not working on iOS after r164890
Simon Fraser (smfr)
Reported 2014-03-03 15:25:17 PST
Composited masks not working on iOS after r164890
Attachments
Patch (1.61 KB, patch)
2014-03-03 15:25 PST, Simon Fraser (smfr)
jer.noble: review+
Simon Fraser (smfr)
Comment 1 2014-03-03 15:25:54 PST
Jer Noble
Comment 2 2014-03-03 15:27:29 PST
Comment on attachment 225699 [details] Patch "Yo dog, I heard you liked maskViews. So I got a maskView for your maskView, so you can mask while you mask." r=me.
Simon Fraser (smfr)
Comment 3 2014-03-03 15:31:04 PST
Note You need to log in before you can comment on or make changes to this bug.