Composited masks not working on iOS after r164890 https://bugs.webkit.org/show_bug.cgi?id=129630

Reviewed by Jer Noble.

Fix typo in UIView-related masks code; set the mask layer
on the view, not the maskView.

* Shared/mac/RemoteLayerTreePropertyApplier.mm:
(WebKit::RemoteLayerTreePropertyApplier::applyProperties):

Canonical link: https://commits.webkit.org/147685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165015 268f45cc-cd09-0410-ab3c-d52691b4dbfc